--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div class="more">
             <div class="expiry">
               <div class="label">
-                <label for="expiry date">Exp.date</label>
+                <label for="expiry date">Exp.date (MM/YY)</label>
               </div>
               <div class="input">
                 <input
