complied to HTML validation standards

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
 
       <div class="second">
-        <form action="">
+        <form class="form">
           <div class="field">
             <label for="name">cardholder name</label>
             <input
@@ -65,7 +65,7 @@
           <div class="more">
             <div class="expiry">
               <div class="label">
-                <label for="expiry date">Exp.date (MM/YY)</label>
+                <label>Exp.date (MM/YY)</label>
               </div>
               <div class="input">
                 <input
@@ -87,7 +87,7 @@
 
             <div class="cvv">
               <div>
-                <label for="expiry date">CVC</label>
+                <label for="cvv">CVC</label>
               </div>
               <div>
                 <input
@@ -113,9 +113,12 @@
           <div class="bg">thank you!</div>
           <div class="subtitle">We've added your card details</div>
           <div class="btn">
-            <a href="https://github.com/Ochoja/Interactive-card">
+            <form
+              action="https://github.com/Ochoja/Interactive-card"
+              method="get"
+            >
               <button>Continue</button>
-            </a>
+            </form>
           </div>
         </div>
       </div>
